--- a/QuantExt/test/testsuite.vcxproj
+++ b/QuantExt/test/testsuite.vcxproj
@@ -648,6 +648,7 @@
     <ClCompile Include="commodityforward.cpp" />
     <ClCompile Include="correlationtermstructure.cpp" />
     <ClCompile Include="cpicapfloor.cpp" />
+    <ClCompile Include="crcirpp.cpp" />
     <ClCompile Include="crossassetmodel.cpp" />
     <ClCompile Include="crossassetmodel2.cpp" />
     <ClCompile Include="crossassetmodelparametrizations.cpp" />
