[Touch:1317]Test base correlation curve and surface configurations.

--- a/OREData/test/OREDataTestSuite.vcxproj
+++ b/OREData/test/OREDataTestSuite.vcxproj
@@ -636,6 +636,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="basecorrelationcurve.cpp" />
     <ClCompile Include="bond.cpp" />
     <ClCompile Include="calendaradjustment.cpp" />
     <ClCompile Include="calendars.cpp" />
