--- a/OREData/test/OREDataTestSuite.vcxproj.filters
+++ b/OREData/test/OREDataTestSuite.vcxproj.filters
@@ -139,5 +139,8 @@
     <ClCompile Include="optionpaymentdata.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="basecorrelationcurve.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
