--- a/Docker/Dockerfile-ORE
+++ b/Docker/Dockerfile-ORE
@@ -23,7 +23,7 @@ RUN cd /ore \
   && find -regex ".*\.\(sh\|in\|ac\|am\)" -exec dos2unix {} ';' \
   && cp Docker/CMakeLists_ORE.txt CMakeLists.txt \
   && mkdir -p build.ore && cd build.ore \
-  && cmake .. -DBUILD_DOC=OFF\
+  && cmake .. -DBUILD_DOC=OFF -DCMAKE_BUILD_TYPE=Release \
   && make -j ${num_cores} \
   && make install \
   && cd / \
