--- a/Docker/Dockerfile-QuantLib
+++ b/Docker/Dockerfile-QuantLib
@@ -15,7 +15,7 @@ COPY QuantLib /ore/QuantLib
 RUN cd /ore/QuantLib \
   && find -regex ".*\.\(sh\|in\|ac\|am\)" -exec dos2unix {} ';' \
   && mkdir -p build.ql && cd build.ql \
-  && cmake .. \
+  && cmake .. -DCMAKE_BUILD_TYPE=Release \
   && make -j ${num_cores} \
   && make install \
   && cd / \
