--- a/QuantExt/qle/CMakeLists.txt
+++ b/QuantExt/qle/CMakeLists.txt
@@ -261,6 +261,7 @@ indexes/ibor/corra.hpp
 indexes/ibor/czkpribor.hpp
 indexes/ibor/demlibor.hpp
 indexes/ibor/dkkcibor.hpp
+indexes/ibor/dkkcita.hpp
 indexes/ibor/dkkois.hpp
 indexes/ibor/ester.hpp
 indexes/ibor/hkdhibor.hpp
@@ -284,6 +285,7 @@ indexes/ibor/primeindex.hpp
 indexes/ibor/rubmosprime.hpp
 indexes/ibor/saibor.hpp
 indexes/ibor/seksior.hpp
+indexes/ibor/sekstina.hpp
 indexes/ibor/sekstibor.hpp
 indexes/ibor/sgdsibor.hpp
 indexes/ibor/sgdsor.hpp
