--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="ored\portfolio\builders\creditdefaultswap.hpp" />
     <ClInclude Include="ored\portfolio\builders\equityforward.hpp" />
     <ClInclude Include="ored\portfolio\builders\equityoption.hpp" />
+    <ClInclude Include="ored\portfolio\builders\equityfuturesoption.hpp" />
     <ClInclude Include="ored\portfolio\builders\forwardbond.hpp" />
     <ClInclude Include="ored\portfolio\builders\fxforward.hpp" />
     <ClInclude Include="ored\portfolio\builders\fxoption.hpp" />
@@ -158,6 +159,7 @@
     <ClInclude Include="ored\portfolio\enginefactory.hpp" />
     <ClInclude Include="ored\portfolio\envelope.hpp" />
     <ClInclude Include="ored\portfolio\equityforward.hpp" />
+    <ClInclude Include="ored\portfolio\equityfuturesoption.hpp" />
     <ClInclude Include="ored\portfolio\equityoption.hpp" />
     <ClInclude Include="ored\portfolio\equityswap.hpp" />
     <ClInclude Include="ored\portfolio\fixingdates.hpp" />
@@ -315,6 +317,7 @@
     <ClCompile Include="ored\portfolio\enginefactory.cpp" />
     <ClCompile Include="ored\portfolio\envelope.cpp" />
     <ClCompile Include="ored\portfolio\equityforward.cpp" />
+    <ClCompile Include="ored\portfolio\equityfuturesoption.cpp" />
     <ClCompile Include="ored\portfolio\equityoption.cpp" />
     <ClCompile Include="ored\portfolio\equityswap.cpp" />
     <ClCompile Include="ored\portfolio\fixingdates.cpp" />
