enable tolerance for dim_evolution*.txt file comparisons

--- a/Tools/PythonTools/comparison_config.json
+++ b/Tools/PythonTools/comparison_config.json
@@ -341,7 +341,7 @@
           }
         ]
       },
-      "dim_evolution.csv": {
+      "dim_evolution*": {
         "keys": [
             "TimeStep",
             "NettingSet"
