--- a/Tools/PythonTools/comparison_config.json
+++ b/Tools/PythonTools/comparison_config.json
@@ -358,6 +358,20 @@
             "rel_tol": null
           }
         ]
+      },
+      "dim_regression*": {
+        "keys": [
+            "Sample",
+        ],
+        "column_settings": [
+          {
+            "names": [
+              "LocalDIM"
+            ],
+            "abs_tol": 0.01,
+            "rel_tol": null
+          }
+        ]
       }
     }
   }
