--- a/Tools/PythonTools/comparison_config.json
+++ b/Tools/PythonTools/comparison_config.json
@@ -505,8 +505,8 @@
             "names": [
               "Value"
             ],
-            "abs_tol": null,
-            "rel_tol": 1e-8
+            "abs_tol": 0.01,
+            "rel_tol": null
           }
         ]
       },
@@ -524,8 +524,8 @@
             "names": [
               "Value"
             ],
-            "abs_tol": null,
-            "rel_tol": 1e-8
+            "abs_tol": 0.01,
+            "rel_tol": null
           }
         ]
       },
