--- a/Docker/docker-compose-ore.yml
+++ b/Docker/docker-compose-ore.yml
@@ -7,5 +7,5 @@ services:
       context: ../
       dockerfile: Docker/Dockerfile-ORE
       args:
-        - quantlib_version=1.18_ac6b843f8
+        - quantlib_version=1.18_9a37ec2c4
         - num_cores=16
