--- a/Docker/docker-compose-quantlib.yml
+++ b/Docker/docker-compose-quantlib.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   env_quantlib:
-    image: env_quantlib:1.18_ac6b843f8
+    image: env_quantlib:1.18_9a37ec2c4
     build:
       context: ../
       dockerfile: Docker/Dockerfile-QuantLib
